# ambrosia

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
cxx/: bridge.cpp  dialect.cpp
cxx/include/: bridge.h  dialect.h  ops.td
src/: bridge.rs  main.rs
