[package]
name = "ambrosia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
codespan-reporting = "0.11.1"
nom = "6"
nom_locate = "3.0.2"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
which = "4.0"
